force-app/main/default/objects/Lead/fields/Current_CRM__c.field-meta.xml
<CustomField>
    <fullName>Current_CRM__c</fullName>
    <label>Current CRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
            <value>
                <fullName>Monday CRM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>