force-app/main/default/objects/Lead/fields/Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count__c</fullName>
    <label>Employee Count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10 employees</fullName>
            </value>
            <value>
                <fullName>11-50 employees</fullName>
            </value>
            <value>
                <fullName>51-200 employees</fullName>
            </value>
            <value>
                <fullName>201-500 employees</fullName>
            </value>
            <value>
                <fullName>501-1,000 employees</fullName>
            </value>
            <value>
                <fullName>1,001-5,000 employees</fullName>
            </value>
            <value>
                <fullName>5,001-10,000 employees</fullName>
            </value>
            <value>
                <fullName>10,001+ employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>