force-app/main/default/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Executive Team</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Student/Intern</fullName>
            </value>
            <value>
                <fullName>Freelancer</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>