force-app/main/default/objects/Lead/fields/Source_Contact_SF__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact_SF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Contact (SF)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Source Contact (SF))</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>