force-app/main/default/objects/Lead/fields/Will_Implement_Starter_or_Pro_Suite__c.field-meta.xml
<CustomField>
    <fullName>Will_Implement_Starter_or_Pro_Suite__c</fullName>
    <label>Will Implement Starter or Pro Suite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>