force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Salesforce_PL__c</columns>
    <columns>LEAD.URL</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified,Archived - No Interest,Archived - Junk,Archived - Future Interest</value>
    </filters>
    <label>Open Leads</label>
</ListView>