force-app/main/default/objects/Lead/listViews/Salesforce_Contacts.listView-meta.xml
<ListView>
    <fullName>Salesforce_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.EMAIL</field>
        <operation>contains</operation>
        <value>@salesforce.com</value>
    </filters>
    <label>Salesforce AEs Leads</label>
</ListView>