force-app/main/default/objects/Lead/listViews/Webinar_Foundations.listView-meta.xml
<ListView>
    <fullName>Webinar_Foundations</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>contains</operation>
        <value>Webinar</value>
    </filters>
    <label>Webinar Foundations</label>
</ListView>